# neon_circular_shift

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  neon_circular_shift.h  test_common.h  test_q_u16.cpp  test_q_u32.cpp  test_q_u8.cpp  test_u64.cpp
